# mssbot

./: .gitignore  autorestart.sh  cconf.py  config.py  config.yaml  dcutils.py  language.yaml  main.py  pyproject.toml  tags.yaml  util.py
bot/: __main__.py  conf.py
bot/utils/: config.py  discord.py  general.py
config/: config.yaml  language.yaml  tags.yaml
